<resources>
    <string name="app_name">StopWatch</string>
    <string name="start">START</string>
    <string name="pause">PAUSE</string>
    <string name="RESET">reset</string>
    <string name="stop">stop</string>
    <string name="hint_et_nickname">What would you call your beloved stopwatch?</string>
    <string name="btn_generate_nickname_text">generate nickname</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_fragment_btn_text">stopwatch</string>
</resources>